paperless/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: docs
  labels:
    app: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      securityContext:
        fsGroup: 3001
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: paperless-export
          persistentVolumeClaim:
            claimName: paperless-export
        - name: paperless-consume
          persistentVolumeClaim:
            claimName: paperless-consume
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: paperless-media
          persistentVolumeClaim:
            claimName: paperless-media
      containers:
      - name: paperless
        image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
        securityContext:
          runAsNonRoot: false
          allowPrivilegeEscalation: true
        resources:
          requests:
            memory: "125Mi"
            cpu: "250m"
          limits:
            memory: "2000Mi"
            cpu: "2000m"
        ports:
        - containerPort: 8000

        volumeMounts:
          - mountPath: /usr/src/paperless/data
            name: paperless-data
          - mountPath: /usr/src/paperless/media
            name: paperless-media
          - mountPath: /usr/src/paperless/export
            name: paperless-export
          - mountPath: /usr/src/paperless/consume
            name: paperless-consume
---
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: docs
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.255.113
  selector:
    app: paperless
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 8000
---
