paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: docs
spec:
  defaultBackend:
    service:
      name: paperless
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - docs
